// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-header emotion-4 emotion-5"
  >
    <div
      class="uc-fe-card-title emotion-0 emotion-1"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-2 emotion-3"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-10 emotion-11"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-content emotion-12 emotion-13"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-content emotion-0 emotion-1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-6 emotion-7"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-header emotion-12 emotion-13"
  >
    <div
      class="uc-fe-card-title emotion-8 emotion-9"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-10 emotion-11"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- popupContainer 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:link,
.emotion-8:visited {
  color: #0a1633;
}

.emotion-8:hover,
.emotion-8:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-21 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-19:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-19 .uc-fe-input-wrap,
.emotion-19 .uc-fe-input-prefix,
.emotion-19 .uc-fe-input-suffix,
.emotion-19 input {
  padding: 0 4px;
}

.emotion-19.uc-fe-input-block {
  display: block;
}

.emotion-19 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 .uc-fe-input-prefix,
.emotion-19 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-19 input,
.emotion-19 input:hover,
.emotion-19 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-19 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-17 {
  vertical-align: baseline;
  margin-left: 5px;
  display: inline-block;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:link,
.emotion-8:visited {
  color: #0a1633;
}

.emotion-8:hover,
.emotion-8:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-21 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-19:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-19 .uc-fe-input-wrap,
.emotion-19 .uc-fe-input-prefix,
.emotion-19 .uc-fe-input-suffix,
.emotion-19 input {
  padding: 0 4px;
}

.emotion-19.uc-fe-input-block {
  display: block;
}

.emotion-19 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 .uc-fe-input-prefix,
.emotion-19 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-19 input,
.emotion-19 input:hover,
.emotion-19 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-19 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-19 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-17 {
  vertical-align: baseline;
  margin-left: 5px;
  display: inline-block;
}

<div>
  <h3>
    Card 提供了内置的 getPopupContainer
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            style="background:#e1e6f0;height:50px;padding:10px"
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class=" emotion-10 emotion-11"
          >
            <div>
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-7 emotion-8 emotion-9"
                type="button"
              >
                <div>
                  请选择
                </div>
                <i
                  class="uc-fe-icon icon__down emotion-4 emotion-5 emotion-6"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker emotion-21 emotion-22"
          >
            <span
              class="uc-fe-input emotion-19 emotion-20"
            >
              <div
                class="uc-fe-input-wrap"
              >
                <span
                  class="uc-fe-input-prefix"
                >
                  <i
                    class="uc-fe-icon icon__calendar emotion-16 emotion-17 emotion-6"
                    color="blue"
                  />
                </span>
                <input
                  placeholder="选择日期"
                  value="2018-07-21 19:55:21"
                />
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker uc-fe-datepicker-month emotion-21 emotion-22"
          >
            <span
              class="uc-fe-input emotion-19 emotion-20"
            >
              <div
                class="uc-fe-input-wrap"
              >
                <span
                  class="uc-fe-input-prefix"
                >
                  <i
                    class="uc-fe-icon icon__calendar emotion-16 emotion-17 emotion-6"
                    color="blue"
                  />
                </span>
                <input
                  placeholder="选择日期"
                  value="2018-07"
                />
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card demo -- single 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:link,
.emotion-10:visited {
  color: #0a1633;
}

.emotion-10:hover,
.emotion-10:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:link,
.emotion-10:visited {
  color: #0a1633;
}

.emotion-10:hover,
.emotion-10:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

<div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
  >
    <div />
    <div
      class="uc-fe-card-content emotion-0 emotion-1"
    >
      <div
        style="background:#e1e6f0;height:50px;padding:10px"
      >
        This is the content
      </div>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      class="uc-fe-card-header emotion-8 emotion-9"
    >
      <div
        class="uc-fe-card-title emotion-4 emotion-5"
      >
        This is the title
      </div>
      <div
        class="uc-fe-card-comment emotion-6 emotion-7"
      >
        This is the comment
      </div>
    </div>
    <div
      class="uc-fe-card-action emotion-14 emotion-15"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      卡片本身无间距
    </div>
  </div>
</div>
`;
